<b>Version 2.4.6.1:</b><br/><br/>
    &#8226; Force close on drafts<br/>
<br/><br/>


<b>Version 2.4.6:</b><br/><br/>
    &#8226; Fix re-searching<br/>
    &#8226; Added a delete all button to the drafts list<br/>
    &#8226; Changes to refresh on startup<br/>
    &#8226; Better translation of tweets<br/>
    &#8226; Fix duplicate users while searching<br/>
    &#8226; Some changes for attaching pictures on KitKat<br/>
    &#8226; Open to the correct page when going to the timeline from a drawer activity<br/>
    &#8226; Changes to attaching pictures from the widget tweet viewer<br/>
    &#8226; Hopefully block alert dialogs coming from the in-app browser<br/>
    &#8226; Added separator in direct message list (full screen layout)<br/>
<br/><br/>

<b>Version 2.4.5:</b><br/><br/>
    &#8226; A few crash fixes<br/>
<br/><br/>

<b>Version 2.4.4:</b><br/><br/>
    &#8226; Use the correct theme on scheduled tweets<br/>
    &#8226; Background cleanup and fixes<br/>
<br/><br/>

<b>Version 2.4.3:</b><br/><br/>
    &#8226; Force external browser for translations<br/>
    &#8226; Fix top tweets on trends<br/>
<br/><br/>

<b>Version 2.4.2:</b><br/><br/>
    &#8226; Android Wear support<br/>
    &#8226; Improved list member viewing<br/>
    &#8226; Insert composed text into a scheduled tweet<br/>
    &#8226; Few changes for loading circle images<br/>
<br/><br/>

<b>Version 2.4.1:</b><br/><br/>
    &#8226; More on viewing multiple images. Twitter releases this feature tomorrow.<br/>
<br/><br/>

<b>Version 2.4.0:</b><br/><br/>
    &#8226; Translate tweets (redirects to website)<br/>
    &#8226; View multiple images in a tweet<br/>
    &#8226; Schedule tweets from the compose window<br/>
    &#8226; Automatically queue tweets to send from the compose window when data connection is established<br/>
    &#8226; Filter in "top tweets" when searching<br/>
    &#8226; Attach pictures from the Talon Pull compose button<br/>
    &#8226; A little better handling of drafts<br/>